Update SquareMapConnection.java